# allocatorstack

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ETHOS.md  README.md  TODOS.md  allocator-ai-working-doc-v2.md  demo  pyproject.toml  requirements.txt  summary.md
.claude/skills/analyze-ddq/: SKILL.md
.claude/skills/draft-memo/: SKILL.md
.claude/skills/monitor-adv/: SKILL.md
.claude/skills/prep-manager-meeting/: SKILL.md
.claude/skills/screen-managers/: SKILL.md
analyze-ddq/: SKILL.md
board-report/: SKILL.md
docs/: positioning.md  skills.md  white-paper.md
docs/designs/: manager-selection-pipeline.md
draft-memo/: SKILL.md
monitor-adv/: SKILL.md
prep-company-meeting/: SKILL.md
prep-manager-meeting/: SKILL.md
samples/: candidate-data.csv
samples/configs/: example_manager_dd.yaml
samples/expected-output/: README.md  comparison-matrix.md  comparison.json  comparison.xlsx  completeness-dashboard.md  ddq-output-granite-peak.json  ddq-output-meridian-value.json  ddq-output-osprey-global.json  follow-up-questions.md
schemas/: ddq-output.yaml  ilpa_aima_v1.yaml  manager-profile.yaml
screen-holdings/: SKILL.md
screen-managers/: SKILL.md
scripts/: extract-pdf.py  generate-excel.py  generate-ilpa-ddq.py  generate-sample-ddqs.py  query-edgar.py  query-finra.py
src/allocator_ai/: __init__.py
src/allocator_ai/adapters/: __init__.py  base.py  csv_adapter.py  finra.py  fred.py  sec_edgar.py  yfinance.py
src/allocator_ai/core/: __init__.py  config.py  context.py  provenance.py  registry.py  verification.py
src/allocator_ai/outputs/: __init__.py  (+2 more)
templates/: board_report.md  ic_memo.md  screening_report.md
tests/: conftest.py  test_extract_pdf.py  test_generate_excel.py  test_query_edgar.py  test_query_finra.py
(+18 files in other folders)
