[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "allocator-ai"
version = "0.1.0"
description = "Open-source AI agent framework for institutional asset allocation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Joyce Li"},
]
dependencies = [
    "litellm>=1.0",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "requests>=2.31",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
