# Dependencies for AllocatorStack helper scripts.
# This is NOT a pip-installable library — it's a Claude Code skill pack.
# These dependencies are only needed by the scripts/ directory.

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "allocatorstack"
version = "0.1.0"
description = "Claude Code skill pack for institutional asset allocation front offices"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Joyce Li"},
]
dependencies = [
    "pymupdf>=1.24",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
